Fixes alignment of chat controls for all views Fixes insert snap button

--- a/desktop/assets/css/desktop.css
+++ b/desktop/assets/css/desktop.css
@@ -820,6 +820,7 @@ a:hover {
 .emojiTitleBar {
   font-size: 16px;
   padding-right: 5px;
+  padding-top: 10px;
 }
 
 .emojiDockBar {
